<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_manipulation_central</name>
  <version>0.0.0</version>
  <description>Shared code for mobile manipulator experiments</description>
  <maintainer email="benjamin.bogenberger@tum.de">benni</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <!-- <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>vicon_bridge</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>robotiq_3f_gripper_control</exec_depend>
  <exec_depend>robotiq_3f_gripper_articulated_msgs</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
